--- a/index.html
+++ b/index.html
@@ -814,10 +814,10 @@
         <h1 class="text-center">SindyCakes </h1>
         <p class="text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, quos?</p>
         <div class="icons text-center">
-            <i class="bi bi-twitter-fill"></i>
-            <i class="bi bi-facebook-fill"></i>
-            <i class="bi bi-whatsapp-fill"></i>
-            <i class="bi bi-instagram-fill"></i>
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-whatsapp"></i>
+            <i class="bi bi-instagram"></i>
             <!-- <i class="bx bxl-twitter"></i> -->
         </div>
         <div class="copyright text-center">
@@ -826,7 +826,7 @@
         <div class="credite text-center">Designed By <a href="#">Ruhamah <span> Kamso</span></a> </div>
     </div>
     <!-- footer -->
-    <a href="#" class="arrow"><i><img src="" alt="" width="50px"></i></a>
+    <a href="#" class="arrow"><i class="bi bi-file-arrow-up-fill"></i></a>
 
 
 
