--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a class="nav-link" href="#about" >About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" >Contacts</a>
+                        <a class="nav-link" href="#contact" >Contacts</a>
                     </li>
                 </ul>
 
@@ -96,7 +96,7 @@
                 </p>
                 <a href="about.html" class="btn">Order Now</a>
                 <div class="img">
-                    <img src="./imgs/Background.png" alt="">
+                    <img src="./imgs/background.png" alt="">
                 </div>
                   
             </div>
@@ -169,7 +169,7 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="bi bi-heart-fill"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i class="bi bi-person-plus-fill"></i></button>
                     </div>
-                    <img src="./imgs/lime .jpg" alt="">
+                    <img src="./imgs/birthday-cake.jpg" alt="">
                     <div class="card-body">
                         <h3>Cream Cake</h3>
                         <div class="star">
@@ -223,7 +223,7 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="bi bi-heart-fill"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i class="bi bi-person-plus-fill"></i></button>
                     </div>
-                    <img src="./imgs/lime-cake.jpg" alt="">
+                    <img src="./imgs/Cookie.webp" alt="">
                     <div class="card-body">
                         <h3>Cream Cake</h3>
                         <div class="star">
@@ -305,7 +305,7 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="bi bi-heart-fill"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i class="bi bi-person-plus-fill"></i></button>
                     </div>
-                    <img src="./imgs/lime-cake.jpg" alt="">
+                    <img src="./imgs/donut-cake.jpg" alt="">
                     <div class="card-body">
                         <h3>Cream Cake</h3>
                         <div class="star">
@@ -358,7 +358,7 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="bi bi-heart-fill"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i class="bi bi-person-plus-fill"></i></button>
                     </div>
-                    <img src="./imgs/lime .jpg" alt="">
+                    <img src="./imgs/Cookie.webp" alt="">
                     <div class="card-body">
                         <h3>Cream Cake</h3>
                         <div class="star">
@@ -394,7 +394,7 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="bi bi-heart-fill"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i class="bi bi-person-plus-fill"></i></button>
                     </div>
-                    <img src="./imgs/lime .jpg" alt="">
+                    <img src="./imgs/birthday-cake.jpg" alt="">
                     <div class="card-body">
                         <h3>Cream Cake</h3>
                         <div class="star">
@@ -448,7 +448,7 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="bi bi-heart-fill"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i class="bi bi-person-plus-fill"></i></button>
                     </div>
-                    <img src="./imgs/lime-cake.jpg" alt="">
+                    <img src="./imgs/birthday-cake.jpg" alt="">
                     <div class="card-body">
                         <h3>Cream Cake</h3>
                         <div class="star">
@@ -530,7 +530,7 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="bi bi-heart-fill"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i class="bi bi-person-plus-fill"></i></button>
                     </div>
-                    <img src="./imgs/lime-cake.jpg" alt="">
+                    <img src="./imgs/Cookie.webp" alt="">
                     <div class="card-body">
                         <h3>Cream Cake</h3>
                         <div class="star">
@@ -583,7 +583,7 @@
                         <button type="button" class="btn btn-secondary" title="Add to Wishlist"><i class="bi bi-heart-fill"></i></button>
                         <button type="button" class="btn btn-secondary" title="Add to Cart"><i class="bi bi-person-plus-fill"></i></button>
                     </div>
-                    <img src="./imgs/lime .jpg" alt="">
+                    <img src="./imgs/birthday-cake.jpg" alt="">
                     <div class="card-body">
                         <h3>Cream Cake</h3>
                         <div class="star">
